# enochian_language_modeling

./: .gitignore  PREKNOWLEDGE.md  PROJECT_STRUCTURE.md  README.md  TODO.md  TOSTUDY.md  dictionary.json  pyproject.toml
.agents/skills/analytics-refresh-workflow/: SKILL.md
.agents/skills/dictionary-enrichment-change/: SKILL.md
.agents/skills/semantic-subtraction-pipeline-guard/: SKILL.md
.agents/skills/translation-evidence-change/: SKILL.md
.claude/: settings.local.json
docs/: analytics_run_checklist.md  debate_remainder_cycle_20260312.md  dictionary_schema.md  semantic_subtraction_step7_audit.md  single_word_translation.md  token_morph_decomposition.md  translation_interpretation_knobs_to_tweak.md  translation_interpretation_schema.md
runs/: dictionary_enrichment_report.txt
scripts/: init_insights_db.py  process_solo_analysis_step1.py
scripts/liber_loagaeth_construction/: ingest_leaves.py  init_loagaeth_db.py
scripts/liber_loagaeth_construction/leaves/: leaf01a.json  leaf03a.json  leaf04b.json  leaf05a.json  leaf06a.json  leaf06b.json  leaf07b.json
src/enochian_common/: __init__.py
src/enochian_lm/: README.md  __init__.py  cli.py
src/enochian_lm/analysis/: README.md  __init__.py  attribution.py  cli.py  colloc.py  factorize.py  find_ngram.py  find_ngram_cli.py  residuals.py
src/enochian_lm/common/: __init__.py  config.py  sqlite_bootstrap.py  types.py
src/enochian_lm/report/: __init__.py  pipeline_summary.py
src/enochian_lm/root_extraction/: __init__.py  main.py
src/enochian_lm/utils/: __init__.py  sql.py
src/enochian_translation_team/: __init__.py  app.py  crew.py  main.py  test_crew.py
src/enochian_translation_team/agents/: adjudicator.py  archivist.py  linguist.py  skeptic.py
src/enochian_translation_team/crew/: root_extraction_crew.py
src/enochian_translation_team/data/: dictionary.json  liber_loagaeth.sqlite3  new-definitions.sqlite3  new_definitions.txt  ngram_index.json  ngram_index.sqlite  sequence_compressions.json  substitution_map.json  trusted_preanalysis_ngrams.json
src/enochian_translation_team/interpretation/: cli.py  repository.py  service.py
src/enochian_translation_team/scripts/: apply_analytics_updates.py  init_insights_db.py  migrate_no_fts.py
src/enochian_translation_team/tools/: debate_engine.py  inspect_definitions.py  inspect_model.py  query_model_tool.py  root_extraction_gui_runner.py  solo_analysis_engine.py  train_fasttext_model.py
src/enochian_translation_team/utils/: analytics_bridge.py  build_ngram_index.py  build_ngram_sidecar.py  candidate_finder.py  config.py  def_reducer.py  (+14 more)
src/training/: TODO.md  __init__.py
src/translation/: __init__.py  agentic_service.py  canon_dictionary_profiles.yml  cli.py  cli_word.py  decomposition.py  fnp.py  llm_synthesis.py  memory.py  phrase_service.py  placeholder_glosses.py  profiles.py  progress.py  repository.py  root_groups.py  scoring.py  service.py  speculative.py  strategies.py  substitution_aliases.py  tokenization.py  translation_profiles.yml
tests/analysis/: test_cli.py  test_find_ngram.py  test_find_ngram_cli.py  test_residual_semantics.py  test_token_morphs.py
tests/root_extraction/: test_candidate_finder_guardrails_core.py  test_candidate_finder_guardrails_optional.py  test_dictionary_word_break_cases.py  test_embeddings_batch_encode.py  test_hierarchy_donor_resolution.py  test_hierarchy_multi_branch_guidance.py  test_local_env_refresher.py  test_opinionated_gloss_prompts.py  test_pipeline_engine_guidance_contract.py  test_pipeline_hierarchy_integration_real_resolver.py  test_process_ngrams_debate_mode.py  test_query_model_tool_non_stream.py  test_residual_guidance_payload.py  test_residual_refresh.py  test_semantic_subtraction_guidance_formatting.py  test_semantic_subtraction_trace_persistence.py  test_sql_preview_mode.py  test_word_break_subtractions.py
tests/translation/: phase_01.py  phase_02.py  phase_03.py  phase_04.py  phase_05.py  test_agentic_translation.py  test_coherence_scoring.py  test_root_groups.py  test_segmentation_rules.py  test_strategy_upgrade.py  test_substitution_aliases.py
(+112 files in other folders)
