[tool.poetry]
name = "enochian_translation_team"
version = "0.1.0"
description = "Small-corpora language modeling"
authors = ["Forrest Wilbur <forrest.a.wilbur@gmail.com"]
readme = "README.md"
packages = [{ include = "enochian_translation_team", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
crewai = ">=0.114.0,<0.115.0"
python-dotenv = "^1.1.0"
openai = "^1.73.0"
crewai-tools = "^0.40.1"
gensim = "^4.3.3"
scikit-learn = "^1.6.1"
python-levenshtein = "^0.27.1"
sentence-transformers = "^4.0.2"
tqdm = "^4.67.1"
tenacity = "^9.1.2"
networkx = "^3.5"
scikit-fuzzy = "^0.5.0"
marisa-trie = "^1.2.1"
hyperopt = "^0.2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
enochian-build-fasttext = "enochian_translation_team.tools.train_fasttext_model:main"
enochian-build-ngram-index = "enochian_translation_team.utils.build_ngram_index:main"
enochian-inspect = "enochian_translation_team.tools.inspect_definitions:main"
enochian-debate = "enochian_translation_team.main:main"
